==> aabzel/trunk/source/mcal/mcal_stm32_hal/timer/timer_mcal.c <==
#include "timer_mcal.h"
#include <stddef.h>
#include <string.h>
#include "bit_utils.h"
#include "clock_custom_const.h"
#include "code_generator.h"
#include "data_utils.h"
#include "float_utils.h"
#include "hal_diag.h"
#include "hal_mcal.h"
#include "log.h"
#include "std_includes.h"
#include "stm32fx_hal.h"
#include "sys_config.h"
#include "timer_custom.h"
#include "core_driver.h"
#include "clock_mcal.h"
#include "software_timer_isr.h"
#include "systick_mcal.h"

int32_t timer_bus_clock_get(uint8_t num) {
    int32_t clock_hz = -1;
    TimerInfo_t* Info = TimerGetInfo(num);
    if(Info) {
        uint32_t pclk = 0;
        switch(Info->clock_bus) {
        case CLOCK_BUS_APB1:
            pclk = HAL_RCC_GetPCLK1Freq();
            break;
        case CLOCK_BUS_APB2:
            pclk = HAL_RCC_GetPCLK2Freq();
            break;
        default:
            LOG_ERROR(TIMER, "NoBusClock");
            break;
        }
        clock_hz = 2 * pclk;
    }
    return clock_hz;
}

uint32_t timer_counter_get(uint8_t num) {
    uint32_t timer_cnt32 = 0;
    TIM_TypeDef* TIMx = timer_get_ptr(num);
    if(TIMx) {
        timer_cnt32 = TIMx->CNT;
    }

    return timer_cnt32;
}

bool timer_ctrl(uint8_t num, bool on_off) {
    bool res = false;
    TimerHandle_t* Node = TimerGetNode(num);
    if(Node) {
        HAL_StatusTypeDef ret = HAL_ERROR;
        ret = HAL_TIM_Base_Stop(&Node->Handle);
        if(on_off) {
            ret = HAL_TIM_Base_Start_IT(&Node->Handle);
            // ret = HAL_TIM_Base_Start(&Node->Handle);
            // HAL_StatusTypeDef HAL_TIM_Base_Start_IT(TIM_HandleTypeDef *htim);
        } else {
            ret = HAL_TIM_Base_Stop_IT(&Node->Handle);
            // ret = HAL_TIM_Base_Stop(&Node->Handle);
        }
        res = HAL_retToRes(ret);
    }
    return res;
}

bool timer_channel_ctrl(uint8_t num, TimerOutChannel_t channel, bool on_off) {
    bool res = false;
    TimerHandle_t* Node = TimerGetNode(num);
    if(Node) {
        res = timer_is_valid_channel(num, channel);
        if(res) {
            res = false;

#ifdef HAS_HAL_TIM_PWM
            uint32_t hal_channel = TimerChannelToHalChannel(channel);
            HAL_StatusTypeDef ret = HAL_ERROR;
            ret = HAL_TIM_PWM_Stop_IT(&Node->Handle, hal_channel);
            if(on_off) {
                res = HAL_TIM_CHANNEL_STATE_READY == TIM_CHANNEL_STATE_GET(&Node->Handle, hal_channel);
                if(res) {
                    ret = HAL_TIM_PWM_Start_IT(&Node->Handle, hal_channel);
                } else {
#ifdef HAS_HAL_DIAG
                    LOG_ERROR(TIMER, "TIM%u,NotReady", num);
#endif
                    res = true;
                }
            } else {
                ret = HAL_TIM_PWM_Stop_IT(&Node->Handle, hal_channel);
            }
            res = HAL_retToRes(ret);

            if(!res) {
#ifdef HAS_HAL_DIAG
                LOG_ERROR(TIMER, "%u=%s", ret, HalStatusToStr(ret));
#endif
            }
#endif /*HAS_HAL_TIM_PWM*/
        }
    }
    return res;
}

bool timer_compare_set(uint8_t num, TimerOutChannel_t channel, uint32_t compare_value) {
    bool res = false;
    TimerInfo_t* Info = TimerGetInfo(num);
    if(Info) {
        res = timer_is_valid_channel(num, channel);
        if(res) {
            switch(channel) {
            case TIMER_OUT_CHANNEL_1: {
                Info->TIMx->CCR1 = compare_value;
                res = true;
            } break;
            case TIMER_OUT_CHANNEL_2: {
                Info->TIMx->CCR2 = compare_value;
                res = true;
            } break;
            case TIMER_OUT_CHANNEL_3: {
                Info->TIMx->CCR3 = compare_value;
                res = true;
            } break;
            case TIMER_OUT_CHANNEL_4: {
                Info->TIMx->CCR4 = compare_value;
                res = true;
            } break;
            default:
                res = false;
                break;
            }
        }
    }
    return res;
}

uint32_t timer_cc_val_get(const uint8_t num, const TimerOutChannel_t channel) {
    uint32_t cap_com_val = 0;
    TimerInfo_t* Info = TimerGetInfo(num);
    if(Info) {
        if(Info->TIMx) {
            switch(channel) {
            case TIMER_OUT_CHANNEL_1: {
                cap_com_val = Info->TIMx->CCR1;
            } break;
            case TIMER_OUT_CHANNEL_2: {
                cap_com_val = Info->TIMx->CCR2;
            } break;
            case TIMER_OUT_CHANNEL_3: {
                cap_com_val = Info->TIMx->CCR3;
            } break;
            case TIMER_OUT_CHANNEL_4: {
                cap_com_val = Info->TIMx->CCR4;
            } break;
            default:
                cap_com_val = 0;
                break;
            }
        }
    }
    return cap_com_val;
}

bool timer_init_one(uint8_t num) {
    bool res = false;
#ifdef HAS_LOG
    LOG_WARNING(TIMER, "%u Init", num);
#endif
    TimerHandle_t* Node = TimerGetNode(num);
    const TimerConfig_t* Config = TimerGetConfig(num);
    TimerInfo_t* Info = TimerGetInfo(num);
    res = timer_verify(Node, Config, Info);

    if(res) {
        uint32_t out_load = 0;
        uint32_t prescaler = 0;
        uint32_t bus_clock_hz = 0;
        res = timer_init_common(Config, Node);
        bus_clock_hz = timer_bus_clock_get(num);
        prescaler = timer_calc_prescaler((uint32_t)bus_clock_hz, Config->cnt_period_ns, TIMER_PRESCALER_MAX);
        res = timer_calc_registers(Config->period_s, bus_clock_hz, prescaler, &out_load, 0xFFFFFFFF);
        if(res) {
            // HAL_TIM_IRQHandler(&Node->Handle);
            if(Info->TIMx) {
                if(Config->interrupt_on) {
                    res = timer_init_interrupts_ll(Info);
                }

                Node->int_cnt = 0;
                Node->Handle.Instance = Info->TIMx;
                res = timer_config_to_init(prescaler, out_load, &Node->Handle.Init);
                res = timer_base_clock_ctrl(num, true);

                if(HAL_OK == HAL_TIM_Base_Init(&Node->Handle)) {
                    res = true;
#ifdef HAS_LOG
                    LOG_DEBUG(TIMER, "%uInitOk", num);
#endif
                }
                res = timer_init_clock(Node);
                res = timer_init_role(Node);
                res = timer_errata_fix(Node);

                float frequency_hz = 1.0f / Config->period_s;
                res = timer_frequency_set(num, frequency_hz);

                res = timer_ctrl(num, Config->on_off);
            } else {
                res = false;
            }
        } else {
#ifdef HAS_LOG
            LOG_ERROR(TIMER, "CalcPscLdErr");
#endif
        }
    }

    return res;
}
